--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "author": "speedyman09",
   "license": "ISC",
   "dependencies": {
-    "fetch-cookie": "^2.1.0",
     "jsdom": "^22.1.0",
-    "node-fetch": "^3.3.2",
-    "node-fetch-cookies": "^2.0.4",
-    "tough-cookie": "^4.1.3"
+    "node-fetch-cookies": "^2.0.4"
   }
 }
